Inserts new welcome header and fixes spacing problems

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -11,16 +11,13 @@
 	text-align: center;
 }
 
-.hero-unit	{
-	background-image: url(../img/pass-icon-welcome.png);
-	background-repeat: no-repeat;
-	background-position: 97% 4%;
-}
+.hero-unit{padding:0 10px;margin-bottom:10px}
 
 #welcome-banner {
 	background-color: white;
 	padding-bottom: 0;
-	padding-top: 1em;
+	padding-top: 0;
+	margin-bottom: 1.75em;
 	text-align: center;
 }
 
@@ -34,12 +31,7 @@
 	line-height: 1.1em; 
 }
 
-#welcome-banner p { color: grey; }
-
-#welcome-banner img {
-	padding: 1em 0 0 0;
-	width: 65%;
-}
+#welcome-banner p { color: grey; margin-top: 0;}
 
 #welcome-buttons { text-align: center; }
 
